--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Room</string>
+    <string name="label_first_name">Prénom</string>
+    <string name="label_last_name">Nom</string>
+    <string name="label_phone_number">Numéro de téléphone</string>
+    <string name="create_contact">Créer un contact</string>
+    <string name="plus">+</string>
 </resources>
